--- a/2_laba/Styles/new_main.css
+++ b/2_laba/Styles/new_main.css
@@ -1,26 +1,34 @@
+/* styles.css */
+
 body {
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url(../img/Bubblles.jpg); 
-    background-size: cover; /* Растягивать изображение, чтобы оно покрывало всю область body */
-    background-position: center center; /* Выравнивать изображение по центру */
-    background-attachment: fixed; /* Зафиксировать изображение при прокрутке страницы (по желанию) */
+    background-image: url(../img/Bubblles.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    font-family: Arial, sans-serif;
 }
 
 .centered {
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
 }
 
 h1 {
     text-align: center;
+    color: #333;
 }
 
 .container {
-    font-size: 25px;
-    max-width: 700px;
+    font-size: 18px;
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 .form-group {
@@ -31,10 +39,20 @@ h1 {
     display: block;
     font-weight: bold;
     margin-bottom: 10px;
+    color: #555;
 }
 
-input, textarea, select {
-    font-size: inherit;
+input[type="text"],
+input[type="password"] {
+    font-size: 16px;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+input[type="checkbox"] {
+    margin-right: 10px;
 }
 
 .btn {
@@ -42,5 +60,14 @@ input, textarea, select {
     height: 40px;
     width: 150px;
     margin: 0 auto;
-    background-color: blue;
+    background-color: #007BFF;
+    color: #fff;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #0056b3;
 }
